src/test/deca/context/invalid/object/protected-fields2.deca
// Description :
//  Accessing a protected field in a different class
//  verifying condition 2 for rule 3.66
// Résultats :
//    Erreur : Erreur contextuelle : x est protege
class A {
    protected int x;
}
class X {
    void m() {
        A a = new A();
        println(a.x) ;
    }
}